[project]
name = "fraud-detection-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]
